add the project preview

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                 A motivated and enthusiastic web developer with a passion for
                 web development, seeking a career in the IT industry where
                 previous experience and skills can be put to efficient use. I am
-                constanly striving to learn new technologies and look at ways to
-                exceed company goals and expectations.
+                constantly striving to learn new technologies and look at ways
+                to exceed company goals and expectations.
               </p>
               <a
                 href="https://drive.google.com/file/d/1XkQZ1dMhrhG5Nfn9SfZoJPAjKCzbSvA3/view?usp=sharing"
@@ -202,7 +202,7 @@
             </p>
             <p>
               <span>Cloud Tools</span>
-              AWS EC2, AWS S3, AWS Route 53, AWS Lambda
+              AWS EC2, AWS S3, AWS Route 53, AWS Lambda, AWS Amplify
             </p>
             <p>
               <span>Database</span>
@@ -214,7 +214,7 @@
             </p>
             <p>
               <span>API</span>
-              RESTful API, JSON, PostMan
+              RESTful API, JSON, Postman
             </p>
             <p>
               <span>Data Technique</span>
@@ -222,7 +222,7 @@
             </p>
             <p>
               <span>Version Control</span>
-              Git, Bitbucket
+              Git
             </p>
 
             <!-- <a href="" class="skill__btn"> Learn More </a> -->
@@ -230,25 +230,33 @@
         </section>
 
         <section class="page__projects" id="page__projects">
-          <div class="projects__left reveal">
+          <div class="projects__title reveal">Projects</div>
+          <!-- <div class="projects__left reveal">
             <span class="projects__title">Projects</span>
-          </div>
-          <div class="projects__right reveal">
-            <p>
-              <span>
-                Intelligent Assistant for electronic Logbook in Radiology
-                Training
-              </span>
-              Completed the planning, design, development, testing of a medical
-              website which could be used to create Logbook for trainee doctors.
-              Worked as a frontend developer in a team of four and implemented
-              frontend with Bootstrap 4, JavaScript, ES6, HTML5, CSS3 and
-              JQuery.
-            </p>
+          </div> -->
+          <div class="projects">
+            <div class="projects__left reveal">
+              <img src="./images/Project_1.jpg" alt="Project_1" />
+            </div>
+            <div class="projects__right reveal">
+              <p>
+                <span> React Weather App </span>
+                Completed the planning, design, development, testing of a
+                weather forecast website which shows information about the
+                current weather, minutely precipitation, hourly forecast, daily
+                forecast and alerts of the input city. It has been implemented
+                by ReactJS, styled-components, fontAwesome, Google fonts and
+                responsive design.
+              </p>
 
-            <a href="https://github.com/ChrisZhangGit" class="projects__btn">
-              View the Projects
-            </a>
+              <a
+                href="https://chriszhanggit.github.io/weather-app-react/"
+                class="projects__btn"
+                target="_blank"
+              >
+                View this Project
+              </a>
+            </div>
           </div>
         </section>
 
@@ -260,10 +268,7 @@
                 Department of Chemistry<br />
                 Science Center
               </p> -->
-              <p class="contact__position">
-                Mascot<br />
-                Sydney, NSW
-              </p>
+              <p class="contact__position">Sydney, NSW</p>
               <a class="contact__email" href="mailto:chriszhangcloud@gmail.com"
                 >chriszhangcloud@gmail.com</a
               ><br />
