update the website

--- a/index.html
+++ b/index.html
@@ -123,13 +123,7 @@
                 constantly striving to learn new technologies and look at ways
                 to exceed company goals and expectations.
               </p>
-              <a
-                href="https://drive.google.com/file/d/1dU_ZGCtp5wCasqvQ1Uat71UZ-ESKqDvX/view?usp=sharing"
-                target="_blank"
-                class="profile__btn"
-              >
-                About Me
-              </a>
+              <a href="" target="_blank" class="profile__btn"> About Me </a>
             </div>
           </div>
         </section>
