update the content

--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
           <div class="skill__right reveal">
             <p>
               <span>Frontend</span>
-              HTML5, CSS3, SASS, JavaScript/ES6, ReactJS, Redux, Bootstrap,
-              Responsive Design, Media Queries, Flexbox, Webpack, JQuery,
-              npm/yarn, FontAwesome, Google Fonts
+              HTML5, CSS3, SASS, JavaScript/ES6, ReactJS, Redux, React Hooks,
+              Bootstrap, Responsive Design, Media Queries, Flexbox, Webpack,
+              JQuery, npm/yarn, FontAwesome, Google Fonts
             </p>
             <p>
               <span>Backend</span>
@@ -218,6 +218,10 @@
               <span>Version Control</span>
               Git
             </p>
+            <p>
+              <span>Testing</span>
+              Jest
+            </p>
 
             <!-- <a href="" class="skill__btn"> Learn More </a> -->
           </div>
@@ -239,8 +243,8 @@
                 weather forecast website which shows information about the
                 current weather, minutely precipitation, hourly forecast, daily
                 forecast and alerts of the input city. It has been implemented
-                by ReactJS, styled-components, fontAwesome, Google fonts and
-                responsive design.
+                by ReactJS, Styled-Components, FontAwesome, Google Fonts and
+                Responsive Design.
               </p>
 
               <a
